# orbit

./: .gitignore  CREATOR.md  README.md  pyproject.toml
orbit/: __init__.py  cli.py
orbit/core/: __init__.py  agent.py  llm.py
orbit/scripts/: __init__.py  self_improve.py
orbit/tools/: __init__.py  base.py  browser.py  browser_control.py  browser_forms.py  browser_simple.py  call_model.py  chat_with_ai.py  code_exec.py  deploy.py  fetch_url.py  generate_training_data.py  open_ai_chat.py  open_url.py  self_optimize.py  self_prompt.py  self_train.py  slave_models.py  system_control.py  train_model.py  web_search.py
orbit_learned/: data.jsonl
tests/: test_agent.py  test_tools.py
