[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit"
version = "0.1.0"
description = "Local AI agent — code execution, browser control, model training, deployment. Efficient autonomous system."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Orbit Contributors"}]
keywords = ["ai", "agent", "autonomous", "tools", "browser", "code", "local"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "graviton-ai[huggingface]>=0.1.0",
    "httpx>=0.24.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
full = [
    "orbit[browser]",
    "chromadb>=0.4.0",
]

[project.scripts]
orbit = "orbit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orbit*"]
